<resources>
    <string name="app_name">BabyCare</string>
    <string name="title_today">Today</string>
    <string name="title_moment">Moment</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_more">More</string>
    <string name="textviewssssssssssssssssss">TextViewssssssssssssssssss</string>
    <string name="button">Button</string>
    <string name="imageee">imagee</string>
    <string name="join_us">Join Us</string>
    <string name="login_in">Login in</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_baby">AddBaby</string>
    <string name="title_activity_today">ScrollingActivity</string>
    <string name="submit">Submit</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="female">Girl</string>
    <string name="male">Boy</string>
    <string name="name">Name</string>
    <string name="baby_information">Baby Information</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="AddBaby">addbaby</string>
    <string name="babyimage">babyImage</string>
    <string name="select_image">Select Picture</string>
    <string name="babyname">BabyName</string>
    <string name="add_a_new_baby">Add a new baby</string>
</resources>