<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_today">

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.example.babycare.ui.today.TodayFragment"
        android:label="@string/title_today"
        tools:layout="@layout/fragment_today"

        />

    <fragment
        android:id="@+id/navigation_moment"
        android:name="com.example.babycare.ui.moment.MomentFragment"
        android:label="@string/title_moment"
        tools:layout="@layout/fragment_discovery" />

    <fragment
        android:id="@+id/navigation_discovery"
        android:name="com.example.babycare.ui.discovery.DiscoveryFragment"
        android:label="@string/title_discovery"
        tools:layout="@layout/fragment_discovery" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.babycare.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/navigation_addBaby"
        android:name="com.example.babycare.ui.today.AddBabyFragment"
        android:label="@string/AddBaby"
        tools:layout="@layout/fragment_addbaby" />
</navigation>